--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
-title:          JBlog
+title:          My Blog Profil
 bio:            'Just a simple Jekyll theme'
 description:    "JBlog is a minimal, one column and blue jekyll theme for your blog."
 picture:        'assets/img/profile.png'
 locale:         en_US
-url:            https://alperenbozkurt.github.io/JBlog
+url:            https://muhamadiqbalsakti.github.io/
 
 
 # Jekyll
